# django-blog

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0003_remove_article_creator.py  0004_article_creator.py
djangocourse/: urls.py
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/registration/: login.html
