[tool.poetry]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = ["Marshal Mori Cavalheiro <marshalmori@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
django-allauth = {extras = ["socialaccount"], version = "^65.2.0"}


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
